istio/destination-rule.yaml
# istio/destination-rule.yaml
#
# Purpose:
# Defines Istio subsets for ASR AI quality service.
#
# v1 = stable release
# v2 = canary release

apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: asr-ai-quality-destination-rule
  namespace: ai-reliability-poc
spec:
  host: asr-ai-quality-service.ai-reliability-poc.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
