istio/virtual-service-rollback.yaml
# istio/virtual-service-rollback.yaml
#
# Purpose:
# Routes 100% of traffic back to v1.
#
# This simulates a safe rollback after a canary issue is detected.

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: as-ai-quality-virtual-service
  namespace: ai-reliability-poc
spec:
  hosts:
    - "*"
  gateways:
    - as-ai-quality-gateway
  http:
    - name: as-ai-quality-rollback-to-v1
      route:
        - destination:
            host: as-ai-quality-service.ai-reliability-poc.svc.cluster.local
            subset: v1
            port:
              number: 80
          weight: 100
        - destination:
            host: as-ai-quality-service.ai-reliability-poc.svc.cluster.local
            subset: v2
            port:
              number: 80
          weight: 0
